"Added a security component to the application, including authentication endpoints for registration and login, utilizing a STATELESS approach with JWT tokens."